--- a/src/widgets/Mentor/PricingSection/ui/TariffCard/TariffCard.module.css
+++ b/src/widgets/Mentor/PricingSection/ui/TariffCard/TariffCard.module.css
@@ -8,7 +8,7 @@
 	background: linear-gradient(180deg, #392d7e -1.02%, #8e79ff 16.39%, #e7e6ff 45.94%, #fff 94.66%);
 }
 
-.title {
+h2.title {
 	margin-top: 60px;
 	font-weight: 700;
 	font-size: 50px;
@@ -25,6 +25,7 @@
 
 .button {
 	margin-top: 40px;
+	padding: 0;
 	font-weight: 500;
 	font-size: 18px;
 }
@@ -34,7 +35,7 @@
 		width: calc(50% - 10px);
 	}
 
-	.title {
+	h2.title {
 		margin-top: 30px;
 	}
 
