--- a/src/widgets/Mentor/PricingSection/ui/TariffCardAdvantages/TariffCardAdvantages.module.css
+++ b/src/widgets/Mentor/PricingSection/ui/TariffCardAdvantages/TariffCardAdvantages.module.css
@@ -17,5 +17,8 @@
 	.card-panel {
 		padding: 12px;
 	}
-}
 
+	p.description {
+		font-size: 14px;
+	}
+}
